<resources>
    <string name="app_name">ShowerCorn</string>
    <string name="recommend">推荐</string>
    <string name="focus">关注</string>
    <string name="homepage">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_username">atrfan</string>
    <string name="default_user_id">uid:1145141919</string>
    <string name="daily_rank">日榜</string>
    <string name="weekly_rank">周榜</string>
    <string name="monthly_rank">月榜</string>
    <string name="animal_ears">兽耳</string>
    <string name="white_hair">白发</string>
    <string name="ai_painting">ai绘画</string>
    <string name="illust">插画</string>
    <string name="manga">漫画</string>
    <string name="fanart">同人</string>

    <string name="loading">正在加载数据，请稍后</string>
    <string name="networkError">本应用出现了一些问题，但这绝对不是我的错&gt;_&lt;</string>
    <string name="image_title">默认标题</string>
    <string name="upload_user">默认作者</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>